--- a/style.css
+++ b/style.css
@@ -97,6 +97,18 @@ main {
   gap: 0.2rem;
 }
 
+#car-pic {
+  max-width: 6em;
+  border-radius: 100%;
+  margin-bottom: 1rem;
+  transition: 200ms;
+  border: #3c3d37 0.2rem solid;
+}
+
+#car-pic:hover {
+  transform: scale(1.05);
+}
+
 #saying-text {
   font-family: "Bitter", serif;
   font-size: 1.5rem;
